terraform/aws/Amazon Virtual Private Cloud/aws_default_security_group_allow.tf
provider "aws" {
  region = "us-west-2"
}

resource "aws_vpc" "mainvpc" {
  cidr_block = "10.1.0.0/16"
}

resource "aws_default_security_group" "default" {
  vpc_id = aws_vpc.mainvpc.id

  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
  }
}
